--- a/Telstraassignment/app/build.gradle
+++ b/Telstraassignment/app/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
